feat: create&get user api
