# api/swagger.json
@@ -291,6 +291,31 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "tags": [
+                    "用户信息"
+                ],
+                "summary": "创建用户",
+                "parameters": [
+                    {
+                        "description": "用户信息",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.CreateUserRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Body-dto_CreateUserResponse"
+                        }
+                    }
+                }
             }
         },
         "/user/email-code/{email}": {
@@ -383,7 +408,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.CreateUserRequest"
+                            "$ref": "#/definitions/dto.RegisterUserRequest"
                         }
                     }
                 ],
@@ -398,6 +423,29 @@
             }
         },
         "/user/{id}": {
+            "get": {
+                "tags": [
+                    "用户信息"
+                ],
+                "summary": "查询用户",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "用户id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Body-dto_CreateUserResponse"
+                        }
+                    }
+                }
+            },
             "put": {
                 "tags": [
                     "用户信息"
@@ -528,15 +576,11 @@
         "dto.CreateUserRequest": {
             "type": "object",
             "required": [
-                "code",
                 "email",
                 "password",
                 "username"
             ],
             "properties": {
-                "code": {
-                    "type": "string"
-                },
                 "email": {
                     "type": "string"
                 },
@@ -684,6 +728,32 @@
                     "type": "string"
                 },
                 "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.RegisterUserRequest": {
+            "type": "object",
+            "required": [
+                "code",
+                "email",
+                "password",
+                "username"
+            ],
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "nickname": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "username": {
                     "type": "string"
                 }
             }
